# Agents

./: greece_accommodations.txt  greece_destinations.txt  greece_itinerary.txt  main.py  pyproject.toml  requirements.txt  test.py  trip_planning_results.txt
DeepLearning_CrewAI_Course/: L4_tools_customer_outreach.ipynb  L5_tasks_event_planning.ipynb
Deeplearning_Langgraph_Course/: Lesson_1_Student.ipynb  Lesson_2_Student.ipynb
Notebooks/: Agents-101.ipynb  Text2SQL.ipynb  agents_with_memory.ipynb
with_agno/: main.py  pyproject.toml
with_agno/notebooks/: agno_101.ipynb
with_langgraph/: .gitignore  main.py  pyproject.toml
with_langgraph/chatbot/: 1_basic.py  2_chatbot_ui.py  3_chatbot_with_streaming.py  4_chatbot_with_save_chat_resume_chat.py
with_langgraph/chatbot/with_database_memory/: backend.py  frontend.py
with_langgraph/deep_research/: main.py  planner.py  research.py  writer.py
with_langgraph/interview/: Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  Untitled4.ipynb  Untitled5.ipynb
with_langgraph/notebooks/: 101.ipynb  Unable_to_Attend_Meeting_Email.txt  agent_memory.txt  agent_with_memory.ipynb  basic_reflection_agent.ipynb  conditional_workflows.ipynb  email_draft_agent.ipynb  first_agent.ipynb  iterative_workflow.ipynb  parallel_workflow.ipynb  persistence.ipynb  react_agent.ipynb  reflexion_agent.ipynb  sequential_workflow.ipynb  structured_output.ipynb  workflow_with_tools.ipynb
with_langgraph/notebooks/memory/short_term_memory/: stm_persistence.ipynb  stm_simple.ipynb  stm_summarization.ipynb  stm_trimming.ipynb
(+18 files in other folders)
