[project]
name = "with-agno"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno>=1.4.3",
    "duckduckgo-search>=8.0.1",
    "groq>=0.24.0",
    "jupyter>=1.1.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "yfinance>=0.2.58",
]
